# name_exchanger_cpp

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.en.md  README.md  custom_font.sfd  main.cpp
.claude/: settings.local.json
lib/: name_exchanger_x64.lib  name_exchanger_x86.lib
res/: res.rc  version.h
src/: app.cpp  app.h  d3d_helpers.cpp  d3d_helpers.h  font_data.h  i18n.cpp  i18n.h  tray.cpp  tray.h  utils.cpp  utils.h
